--- a/_posts/2018-11-23-CXF.md
+++ b/_posts/2018-11-23-CXF.md
@@ -10,7 +10,7 @@ Camel에서 web service 이용하기 위해서 사용한다.
 WSDL 이용하여 정의한다.
 Apache CXF 이용하여 web service publishing하는데, 이때 JAX-WS를 이용한다.
 
-![cxf](C:/Users/NaYoung/Documents/Markdown/Camel-ESB/cxf.png)
+![cxf](/images/cxf/cxf.png)
 WSDL로 구성된 message는 XML로 구성되어 있다.
 SOAP/HTTP 이용하여 전송
 
@@ -77,7 +77,7 @@ Transport 타입, message encoding
 웹서비스를 드러낼 port binding
 
 ##### [Format]
-![WSDL](C:/Users/NaYoung/Documents/Markdown/Camel-ESB/WSDL.png)
+![WSDL](/images/cxf/WSDL.png)
 * \<wsdl:definitions>
 WSDL은 \<wsdl:definitions>로 시작해 \<wsdl:definitions>로 끝난다.
 WSDL의 모든 문서는 \<wsdl:definitions> 구문으로 묶는다.
@@ -102,7 +102,7 @@ CXF component 정의하는 방법
 2.	Code-first development
 
 WSDL file을 먼저 생성 → CXF 통하여 WSDL에서 Java class 생성하여 이용
-![contract-first-development](C:/Users/NaYoung/Documents/Markdown/Camel-ESB/contract-first-development.png)
+![contract-first-development](/images/cxf/contract-first-development.png)
 
 CXF endpoint 정의하여 Camel에서 CXF component 사용
 ```xml
@@ -139,7 +139,7 @@ If, 2개 이상의 \<cxf:cxfEndpoint>가 정의되어 있다면, serviceName(WSD
 #### 4. Code-first approach
 Java Interface class 구현 → CXF 이용하여 WSDL 생성 후 사용
 Java class 구현할 때는 JAX-WS annotation 이용
-![contract-first-development](C:/Users/NaYoung/Documents/Markdown/Camel-ESB/contract-first-development.png)
+![contract-first-development](/images/cxf/contract-first-development.png)
 
 * 순서
 ⅰ. 사용할 method, type, parameter 정의
